# multiling_tse

./: .gitignore  MANIFEST.in  README.md  environment.yml  pyproject.toml
configs/base/: classifier_oneshot.yaml  kp_fit.yaml  li_oneshot_classifier.yaml  li_stance_classifier.yaml  li_target_classifier.yaml  li_target_generator.yaml  mbart_target_generator.yaml  mines_tc_oneshot.yaml  mines_tg_oneshot.yaml  mt5_target_generator.yaml  target_classifier.yaml  tg_classifier.yaml  tg_oneshot.yaml  tg_pretrained.yaml
configs/data/: altparse_tg_oneshot.yaml  li_stance_test.yaml  li_target_predict.yaml  li_tc_predict.yaml  li_tc_test.yaml  li_tse_stance_test_split.yaml  li_tse_target_predict_all.yaml  li_tse_target_test.yaml  (+6 more)
data/: .gitignore  README.md
mtse/: cli.py  constants.py  mapping.py  train_ft.py  translate.py  types.py  utils.py
scripts/: class_os_multi.sh  ft_gridsearch.sh  fullpart_cstance.py  mling_tgen.sh  multi_li.sh  multi_li_tc.sh  multi_li_tcls.sh  multi_li_tgen.sh  multi_mines_tc.sh  multi_mines_tcls.sh  multi_mines_tg.sh  multi_mines_tgen.sh  part_cstance.py  part_nlpcc.py  split_tse.py  split_tse_test.py  tg_multi.sh  trans_kptimes.sh
static/: li_merged_targets.txt  multiling_targets.txt  nlpcc2016_targets.txt  yingjie_merged_targets.txt
utils/: cat_preds.py  compute_max.py  compute_mean.py  download.sh  kptimes_download.sh  kptimes_prepare.sh  multiling_download.sh  multiling_preproc.sh  preproc_cic_data.py  preproc_cs_data.py  preproc_et_data.py  preproc_hi_data.py  preproc_lai_data.py  preproc_nlpcc_data.py  preproc_sardi_data.py  split_tse.py
(+44 files in other folders)
