[project]
name = "mtse"
version = "0.0.1"
requires-python = ">=3.12, < 3.13"
dependencies = [
    "sentencepiece",
    "protobuf",
    "torch",
    "torchmetrics",
    "transformers",
    "lightning",
    "jsonargparse[signatures]",
    "wordninja",
    "tweet-preprocessor",
    "gensim",
    "torch-scatter"
]
[tool.setuptools.packages.find]
include =["mtse*"]